깃허브 커밋 테스트

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
     <title>Golden Dice</title>
     <meta charset="utf-8"/>
     <script>
+        //깃헙 커밋 테스트
+
         //js 정리하기. 랜덤만 페이지에 표시. 나머지것들은 분류하기
         //global field는 참조된 다른 js 파일들에도 공유되는거 같다..!
 
